--- a/capaPresentacion/pom.xml
+++ b/capaPresentacion/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>RSCalendar</artifactId>
             <version>SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>capaNegocios</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
